--- a/src/app/member/profile-settings/profile-settings.page.html
+++ b/src/app/member/profile-settings/profile-settings.page.html
@@ -1,6 +1,18 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>profile-settings</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false">
+        <ion-icon color="primary" src="./assets/system/icons/menu.svg"></ion-icon>
+      </ion-menu-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button (click)="show_profile()">
+        <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title mode="ios">
+      <img width="30em" src="./assets/icon/pscrs_logo.png">
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
