added login/surgical/lectures/news/experts/about updates

--- a/src/app/member/about-pscrs/about-pscrs.page.html
+++ b/src/app/member/about-pscrs/about-pscrs.page.html
@@ -17,5 +17,93 @@
 </ion-header>
 
 <ion-content>
+<ion-list>
+  <ion-item>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="12">
+          <h3>About Us</h3>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          VIsion
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          Mission
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          President's Message
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="12">
+          <h3>Frequently Asked Questions</h3>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          Question 1
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          Question 2
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          Question 3
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+  
+</ion-list>
+
+<ion-list>
+  <ion-item>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="12"><h3>Terms and Conditions</h3></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12" class="ion-text-justify">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam accumsan nisl in lacus finibus, ut maximus ante laoreet. Sed eu nisi id ligula dignissim bibendum eget at est. Ut et auctor tellus, ac suscipit tellus. Maecenas ultricies nulla orci, eu molestie nulla egestas in. Donec fringilla risus mauris, vitae ultricies augue molestie tempor. Pellentesque convallis, leo ac lobortis pretium, lacus massa tincidunt odio, non rutrum neque arcu vel orci. Morbi tempor ligula eget dictum scelerisque. Vivamus vitae erat vitae lectus varius ultricies. Ut ligula lorem, condimentum sed lacinia vel, semper in dui. Nam ornare in elit non cursus. Nullam luctus tortor placerat sem semper aliquam. Fusce nec euismod sapien. Sed egestas gravida risus, quis sodales nibh interdum vitae. Nam euismod libero posuere tellus semper, et suscipit tellus efficitur. Donec lacinia erat finibus elit iaculis facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+  
+</ion-list>
+
+
+<ion-list>
+  <ion-item>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="12"><h3>Privacy Policy</h3></ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12" class="ion-text-justify">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam accumsan nisl in lacus finibus, ut maximus ante laoreet. Sed eu nisi id ligula dignissim bibendum eget at est. Ut et auctor tellus, ac suscipit tellus. Maecenas ultricies nulla orci, eu molestie nulla egestas in. Donec fringilla risus mauris, vitae ultricies augue molestie tempor. Pellentesque convallis, leo ac lobortis pretium, lacus massa tincidunt odio, non rutrum neque arcu vel orci. Morbi tempor ligula eget dictum scelerisque. Vivamus vitae erat vitae lectus varius ultricies. Ut ligula lorem, condimentum sed lacinia vel, semper in dui. Nam ornare in elit non cursus. Nullam luctus tortor placerat sem semper aliquam. Fusce nec euismod sapien. Sed egestas gravida risus, quis sodales nibh interdum vitae. Nam euismod libero posuere tellus semper, et suscipit tellus efficitur. Donec lacinia erat finibus elit iaculis facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+  
+</ion-list>
 
 </ion-content>
