--- a/src/app/member/experts_module/experts/experts.page.html
+++ b/src/app/member/experts_module/experts/experts.page.html
@@ -18,5 +18,17 @@
 
 
 <ion-content>
+  <ion-list>
+    <ion-list-header>
+      <ion-label>Ask The Experts</ion-label>
+    </ion-list-header>
+    <ion-item button (click)="show_convo()" mode="ios">
+      <ion-avatar slot="start">
+        <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+      </ion-avatar>
+      <ion-label>Expert 1</ion-label>
+    </ion-item>
+
+  </ion-list>
 
 </ion-content>
