--- a/src/app/member/lectures/lectures.page.html
+++ b/src/app/member/lectures/lectures.page.html
@@ -16,10 +16,9 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
   <ion-text>
-    <h4 class="ion-margin-start">Instructional Lectures</h4>
+    <h4 class="ion-margin-start" style="margin-bottom: 0px; padding-bottom:0px;">Instructional Lectures</h4>
   </ion-text>
 
   <ion-item class="ion-no-padding">
@@ -32,9 +31,14 @@
               <strong>Title</strong>
             </h2>
             <small>Date</small>
-            <ion-avatar>
-              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="2">
+                <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+              </ion-col>
+              <ion-col size="10">
+                <p><small style="margin-left:-1em;">Marcus Jonas Curioso</small></p>
+              </ion-col>
+            </ion-row>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
               Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
           </ion-col>
@@ -60,9 +64,14 @@
               <strong>Title</strong>
             </h2>
             <small>Date</small>
-            <ion-avatar>
-              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="2">
+                <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+              </ion-col>
+              <ion-col size="10">
+                <p><small style="margin-left:-1em;">Marcus Jonas Curioso</small></p>
+              </ion-col>
+            </ion-row>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
               Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
           </ion-col>
