--- a/src/app/member/surgical-videos/surgical-videos.page.html
+++ b/src/app/member/surgical-videos/surgical-videos.page.html
@@ -19,7 +19,7 @@
 
 <ion-content>
   <ion-text>
-    <h4 class="ion-margin-start">Surgical Videos</h4>
+    <h4 class="ion-margin-start" style="margin-bottom: 0px; padding-bottom:0px;">Surgical Videos</h4>
   </ion-text>
 
   <ion-item class="ion-no-padding">
@@ -32,9 +32,14 @@
               <strong>Title</strong>
             </h2>
             <small>Date</small>
-            <ion-avatar>
-              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="2">
+                <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+              </ion-col>
+              <ion-col size="10">
+                <p><small style="margin-left:-1em;">Marcus Jonas Curioso</small></p>
+              </ion-col>
+            </ion-row>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
               Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
           </ion-col>
@@ -50,6 +55,8 @@
       </ion-grid>
     </ion-card-content>
   </ion-item>
+
+
   <ion-item class="ion-no-padding">
     <ion-card-content>
       <img width="100%" src="/assets/shapes.svg">
@@ -60,9 +67,14 @@
               <strong>Title</strong>
             </h2>
             <small>Date</small>
-            <ion-avatar>
-              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
+            <ion-row class="ion-align-items-center">
+              <ion-col size="2">
+                <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+              </ion-col>
+              <ion-col size="10">
+                <p><small style="margin-left:-1em;">Marcus Jonas Curioso</small></p>
+              </ion-col>
+            </ion-row>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
               Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
           </ion-col>
