--- a/src/app/member/tech-news/tech-news.page.html
+++ b/src/app/member/tech-news/tech-news.page.html
@@ -18,64 +18,71 @@
 
 
 <ion-content>
-  <ion-text>
-    <h4 class="ion-margin-start">Technology News</h4>
-  </ion-text>
+  <ion-grid class="ion-no-padding ion-margin">
+    <ion-text>
+      <h4 style="margin-bottom: 0px; padding-bottom:0px;">Technology News</h4>
+    </ion-text>
+    <ion-row class="ion-text-justify ion-padding-top">
+      <ion-col size="12">
+        <ion-label>
+          <h5>
+            <strong>Technology News Title</strong>
+          </h5>
+          <small>October 1, 2020</small><br>
+          <ion-row class="ion-align-items-center">
+            <ion-col size="2">
+              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
+            </ion-col>
+            <ion-col size="10">
+              <p><small style="margin-left:-1em;">Marcus Jonas Curioso</small></p>
+            </ion-col>
+          </ion-row>
+          <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor
+            nisl.
+            Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</small>
+        </ion-label>
 
-  <ion-item class="ion-no-padding">
-    <ion-card-content>
-      <img width="100%" src="/assets/shapes.svg">
-      <ion-grid class="ion-no-padding ion-no-margin">
-        <ion-row>
-          <ion-col size="12">
-            <h2>
-              <strong>Title</strong>
-            </h2>
-            <small>Date</small>
-            <ion-avatar>
+      </ion-col>
+      <ion-col size="12" class="ion-padding-top">
+        <ion-button (click)="onClick()" size="small" color="medium">
+          Rate this article
+        </ion-button>
+        <ion-button (click)="onClick()" size="small" color="medium">
+          Send us feedback
+        </ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="ion-text-justify ion-padding-top">
+      <ion-col size="12">
+        <ion-label>
+          <h5>
+            <strong>Technology News Title</strong>
+          </h5>
+          <small>October 1, 2020</small><br>
+          <ion-row class="ion-align-items-center">
+            <ion-col size="2">
               <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
-              Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
-          </ion-col>
-          <ion-col size="12">
-            <ion-button (click)="onClick()" size="small" color="medium">
-              Rate this video
-            </ion-button>
-            <ion-button (click)="onClick()" size="small" color="medium">
-              Send us feedback
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-item>
-  <ion-item class="ion-no-padding">
-    <ion-card-content>
-      <img width="100%" src="/assets/shapes.svg">
-      <ion-grid class="ion-no-padding ion-no-margin">
-        <ion-row>
-          <ion-col size="12">
-            <h2>
-              <strong>Title</strong>
-            </h2>
-            <small>Date</small>
-            <ion-avatar>
-              <ion-icon style="font-size: 2em;" color="primary" name="person-circle-outline"></ion-icon>
-            </ion-avatar>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor nisl.
-              Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</p>
-          </ion-col>
-          <ion-col size="12">
-            <ion-button (click)="onClick()" size="small" color="medium">
-              Rate this video
-            </ion-button>
-            <ion-button (click)="onClick()" size="small" color="medium">
-              Send us feedback
-            </ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-item>
+            </ion-col>
+            <ion-col size="10">
+              <small style="margin-left:-1em;">Marcus Jonas Curioso</small>
+            </ion-col>
+          </ion-row>
+          <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac sagittis libero. Donec a dolor
+            nisl.
+            Phasellus bibendum leo a est ultrices, non interdum justo consectetur.</small>
+        </ion-label>
+
+      </ion-col>
+      <ion-col size="12" class="ion-padding-top">
+        <ion-button (click)="onClick()" size="small" color="medium">
+          Rate this article
+        </ion-button>
+        <ion-button (click)="onClick()" size="small" color="medium">
+          Send us feedback
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
