--- a/src/app/public/login/login.page.scss
+++ b/src/app/public/login/login.page.scss
@@ -3,6 +3,14 @@ ion-card {
     margin-top: 15vh;
 }
 
-ion-content {
-    --background: url(../../../assets/system/images/background.png) 0 0/100% 100% no-repeat;
-}
+// .bg-image{
+//     --background: url(../../../assets/system/images/background.png)  no-repeat center/ cover fixed;
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+// }
+
+
+// .background-page {
+//     --background: url("data:image/png;base64,../../assets/system/images/background.png") 0 0/100% 100% no-repeat;
+// }
