--- a/src/app/public/initial/initial.page.scss
+++ b/src/app/public/initial/initial.page.scss
@@ -3,6 +3,6 @@
     display: block;
 }
 
-ion-content {
-    --background: url(../../../assets/system/images/background.png) 0 0/100% 100% no-repeat;
-}
+// ion-content {
+//     --background: url(../../../assets/system/images/background.png) 0 0/100% 100% no-repeat;
+// }
