--- a/src/app/member/billing/billing.page.html
+++ b/src/app/member/billing/billing.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>contact-us</ion-title>
+    <ion-title>billing</ion-title>
   </ion-toolbar>
 </ion-header>
 
