--- a/src/app/member/profile-settings/profile-settings.page.html
+++ b/src/app/member/profile-settings/profile-settings.page.html
@@ -18,4 +18,73 @@
 
 <ion-content>
 
+  <div *ngIf="!profile;else elseBlock">
+
+    <ion-text>
+      <h4 class="ion-margin-start" style="margin-bottom: 0px; padding-bottom:0px;">Profile Settings</h4>
+    </ion-text>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col size="12">
+          <ion-icon style="font-size: 7em;" color="primary" name="person-circle-outline"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-label position="stacked" class="ion-padding-start">User ID:</ion-label>
+    <br><br>
+    <div>
+      <ion-label position="stacked" class="ion-padding-start">Name</ion-label>
+      <ion-item class="ion-margin input-border">
+        <ion-input disabled inputmode="text" value=""></ion-input>
+      </ion-item>
+
+      <ion-label position="stacked" class="ion-padding-start">Email</ion-label>
+      <ion-item class="ion-margin input-border">
+        <ion-input disabled inputmode="email" value=""></ion-input>
+        <!-- <ion-button color="primary" item-right>
+          <ion-text color="light">Change</ion-text>
+        </ion-button> -->
+      </ion-item>
+
+      <ion-label position="stacked" class="ion-padding-start">Contact Number</ion-label>
+      <ion-item class="ion-margin input-border">
+        <ion-input disabled inputmode="text" value=""></ion-input>
+      </ion-item>
+
+      <ion-label position="stacked" class="ion-padding-start">New Password</ion-label>
+      <ion-item class="ion-margin input-border">
+        <ion-input disabled inputmode="password" value=""></ion-input>
+      </ion-item>
+
+      <ion-label position="stacked" class="ion-padding-start">Re-enter New Password</ion-label>
+      <ion-item class="ion-margin input-border">
+        <ion-input disabled inputmode="password" value=""></ion-input>
+      </ion-item>
+
+      <div class="ion-padding-top">
+        <ion-row>
+          <ion-col class="ion-padding-start ion-padding-end" size="12">
+            <ion-button expand="block">
+              <ion-text color="light">Update Profile</ion-text>
+            </ion-button>
+          </ion-col>
+          <ion-col class="ion-padding-start" size="6">
+            <ion-button expand="block">
+              <ion-text color="light">Calendar</ion-text>
+            </ion-button>
+          </ion-col>
+          <ion-col class="ion-padding-end" size="6">
+            <ion-button expand="block">
+              <ion-text color="light">Billing</ion-text>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </div>
+
+    </div>
+
+  </div>
+
+  <ng-template #elseBlock></ng-template>
+
 </ion-content>
