--- a/src/app/public/initial/initial.page.html
+++ b/src/app/public/initial/initial.page.html
@@ -1,4 +1,5 @@
-<ion-content style="height:100vh;">
+<ion-content style="height:100vh;" class="bg">
+
   <div class="ion-margin">
 
     <ion-grid fixed id="logo_grid">
@@ -12,10 +13,12 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <ion-button class="ion-margin" fill="solid" color="primary" expand="block" (click)="show_login()">Member Log In
+          <ion-button class="ion-margin" fill="solid" color="primary" expand="block" (click)="show_login()">Member Log
+            In
           </ion-button>
-      
-          <ion-button class="ion-margin" fill="solid" color="primary" expand="block" (click)="show_signup()">Profile Registration
+
+          <ion-button class="ion-margin" fill="solid" color="primary" expand="block" (click)="show_signup()">Profile
+            Registration
           </ion-button>
         </ion-col>
       </ion-row>
@@ -25,13 +28,14 @@
           </ion-button>
         </ion-col>
         <ion-col size="6">
-          <ion-button class="ion-margin-end" fill="solid" color="primary" expand="block" (click)="show_contact()">Contact Us
+          <ion-button class="ion-margin-end" fill="solid" color="primary" expand="block" (click)="show_contact()">
+            Contact Us
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
 
-    
+
   </div>
 
 </ion-content>
