--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,15 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
+
         </ion-list>
+        <ion-menu-toggle auto-hide="false">
+          <!-- (click)="logout()" -->
+          <ion-item routerDirection="root" href="public/initial" lines="none" detail="false">
+            <!-- <ion-icon slot="start" [ios]="logout-outline'" [md]="logout-sharp'"></ion-icon> -->
+            <ion-label>Log Out</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
